# neuro-sym

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/verilogic_ns_api/: __init__.py  config.py  main.py  models.py
backend/src/verilogic_ns_api/api/: router.py
backend/src/verilogic_ns_api/baselines/: __init__.py  __main__.py  cache.py  cli.py  comparison.py  configuration.py  models.py  ollama_provider.py  openai_provider.py  planning.py  predictors.py  prompts.py  provider.py  schema.py  selection.py
backend/src/verilogic_ns_api/datasets/: __init__.py  __main__.py  acquisition.py  cli.py  errors.py  inspection.py  preparation.py  proofwriter.py  sampling.py
backend/src/verilogic_ns_api/evaluation/: __init__.py  __main__.py  cli.py  metrics.py  predictors.py  protocol.py  runner.py
backend/src/verilogic_ns_api/reasoning/: __init__.py  __main__.py  cli.py  configuration.py  engine.py  models.py  proofs.py  proofwriter.py  schema_export.py  unification.py  verifier.py
backend/tests/: test_dataset_acquisition.py  test_dataset_commands.py  test_evaluation.py  test_health.py  test_llm_baselines.py  test_normalized_schema.py  test_ollama_provider.py  test_openai_provider.py  test_proofwriter_loader.py  test_reasoning_cli_and_proofwriter.py  test_reasoning_engine.py  test_reasoning_proofs_and_schema.py  test_reasoning_properties.py  test_sampling_and_leakage.py  test_schema.py  test_semantic_parsing.py  test_validation_correction.py
datasets/: README.md
(+130 files in other folders)
